--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-04-29  Priit Laes  <plaes@cvs.gnome.org>
+
+	* et.po: Translation updated by  Sven Sapelson.
+
 2005-04-28   Kostas Papadimas <pkst@gnome.org>
 
 	* el.po: Updated Greek translation
