--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-05-02  Priit Laes  <plaes@cvs.gnome.org>
+
+	* et.po: Translation updated by  Sven Sapelson.
+
 2005-04-30  Josep Puigdemont  <josep.puigdemont@gmail.com>
 
 	* ca.po: Updated Catalan translation.
