Remove the ui too.
2005-05-02  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/nautilus-desktop-icon-view-ui.xml:
	Remove the ui too.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-05-02  Alexander Larsson  <alexl@redhat.com>
+
+	* src/file-manager/nautilus-desktop-icon-view-ui.xml:
+	Remove the ui too.
+
 2005-04-27  Alexander Larsson  <alexl@redhat.com>
 
 	* src/file-manager/fm-desktop-icon-view.c:
