Add Ctrl-0 keyboard shortcut to View->Normal Size as recommended by the
2005-05-02  Martin Wehner  <martin.wehner@gmail.com>

	* src/nautilus-window-menus.c:
	Add Ctrl-0 keyboard shortcut to View->Normal Size as
	recommended by the HIG.

	Patch from Olav Vitters <olav@bkor.dhs.org>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2005-05-02  Martin Wehner  <martin.wehner@gmail.com>
 
+	* src/nautilus-window-menus.c:
+	Add Ctrl-0 keyboard shortcut to View->Normal Size as
+	recommended by the HIG.
+	
+	Patch from Olav Vitters <olav@bkor.dhs.org>
+
+2005-05-02  Martin Wehner  <martin.wehner@gmail.com>
+
 	* libnautilus-private/nautilus-icon-container.c:
 	(keyboard_space): Prevent nautilus from crashing on press of
 	Ctrl+Space in an empty directory. Fixes bug #302018.
