--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-05-04  Priit Laes  <plaes@cvs.gnome.org>
+
+	* et.po: Translation updated by  Sven Sapelson.
+
 2005-05-04  Changwoo Ryu  <cwryu@debian.org>
 
 	* ko.po: Updated Korean translation.
