Translation updated by Sven Sapelson.
2005-05-09  Priit Laes  <plaes@cvs.gnome.org>

	* et.po: Translation updated by  Sven Sapelson.

--- a/po/et.po
+++ b/po/et.po
@@ -2650,7 +2650,7 @@ msgstr "Rakenduse käivitamisel tekkis viga."
 #: ../libnautilus-private/nautilus-program-choosing.c:601
 #: ../src/nautilus-window-manage-views.c:1387
 msgid "The attempt to log in failed."
-msgstr "Sisselogimine ebaõnnestus."
+msgstr "Sisselogimine nurjus."
 
 #: ../libnautilus-private/nautilus-program-choosing.c:606
 #: ../src/nautilus-window-manage-views.c:1393
