Translation updated by Ivar Smolin.
2005-05-09  Priit Laes  <plaes@cvs.gnome.org>

	* et.po: Translation updated by Ivar Smolin.

--- a/po/et.po
+++ b/po/et.po
@@ -11,9 +11,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-04-28 13:59+0000\n"
-"PO-Revision-Date: 2005-04-19 21:55+0300\n"
-"Last-Translator:  Sven Sapelson <sven.sapelson@gmail.com>\n"
+"POT-Creation-Date: 2005-05-02 06:01+0000\n"
+"PO-Revision-Date: 2005-05-09 13:59+0300\n"
+"Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -465,7 +465,7 @@ msgstr "Kasutajale nähtav veeru kirjeldus"
 
 #: ../libnautilus-extension/nautilus-column.c:204
 msgid "xalign"
-msgstr ""
+msgstr "Horisontaalne joondamine"
 
 #: ../libnautilus-extension/nautilus-column.c:205
 #, fuzzy
@@ -498,7 +498,7 @@ msgstr "Menüüs näidatava ikooni nimi"
 
 #: ../libnautilus-extension/nautilus-menu-item.c:235
 msgid "Sensitive"
-msgstr ""
+msgstr "Tundlikkus"
 
 #: ../libnautilus-extension/nautilus-menu-item.c:236
 msgid "Whether the menu item is sensitive"
@@ -589,8 +589,9 @@ msgid "Default Side Pane Background Color"
 msgstr "Kasuta _vaikimisi tausta"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:13
+#, fuzzy
 msgid "Default Side Pane Background Filename"
-msgstr ""
+msgstr "Kõrvalpaani vaikimisi tausta failinimi"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:14
 msgid "Default column order in the list view"
@@ -615,8 +616,9 @@ msgid "Default list of columns visible in the list view"
 msgstr ""
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:19
+#, fuzzy
 msgid "Default list of columns visible in the list view."
-msgstr ""
+msgstr "Vaikimisi nähtavate veergude loend nimekirjavaates."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:20
 #, fuzzy
@@ -691,19 +693,21 @@ msgid ""
 "If set to true, Nautilus will only show folders in the tree side pane. "
 "Otherwise it will show both folders and files."
 msgstr ""
+"Kui valik on aktiivne, näitab Nautilus kõrvalpaanis ainult katalooge. "
+"Vastasel juhul näitab Nautilus katalooge ja faile."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:35
 msgid ""
 "If set to true, newly opened windows will have the location bar visible."
-msgstr ""
+msgstr "Kui valik on aktiivne, näidatakse uutel akendel asukohariba."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:36
 msgid "If set to true, newly opened windows will have the side pane visible."
-msgstr ""
+msgstr "Kui valik on aktiivne, näidatakse uutel akendel kõrvalpaani."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:37
 msgid "If set to true, newly opened windows will have the status bar visible."
-msgstr ""
+msgstr "Kui valik on aktiivne, näidatakse uutel akendel olekuriba."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:38
 msgid "If set to true, newly opened windows will have toolbars visible."
@@ -727,12 +731,14 @@ msgid ""
 "If set to true, then Nautilus will ask for confirmation when you attempt to "
 "put files in the trash."
 msgstr ""
+"Kui valik on aktiivne, küsib Nautilus kinnitust enne failide prügikasti "
+"tõstmist."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:42
 msgid ""
 "If set to true, then Nautilus will bring up a new Nautilus window by default "
 "whenever an item is opened."
-msgstr ""
+msgstr "Kui valik on aktiivne, kuvab Nautilus iga kirje avamisel uue akna."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:43
 #, fuzzy
@@ -745,6 +751,9 @@ msgid ""
 "file immediately and in-place, instead of moving it to the trash. This "
 "feature can be dangerous, so use caution."
 msgstr ""
+"Kui valik on aktiivne, lubab Nautilus faile kohapeal kustutada ilma neid "
+"prügikasti tõstmata. See omadus võib olla ohtlik ja seda tuleks kasutada "
+"ettevaatusega."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:45
 #, fuzzy
@@ -761,6 +770,8 @@ msgid ""
 "how Nautilus used to behave before version 2.6, and some people prefer this "
 "behavior."
 msgstr ""
+"Kui valik on aktiivne, näitab Nautilus kõiki aknaid sirvijana. Nii toimis "
+"Nautilus enne versiooni 2.6 ning osa kasutajaid eelistab seda võimalust"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:47
 msgid ""
@@ -781,19 +792,19 @@ msgstr ""
 msgid ""
 "If this is set to true, an icon linking to the computer location will be put "
 "on the desktop."
-msgstr ""
+msgstr "Kui valik on aktiivne, viitab ikoon töölaualt asukohale 'Arvuti'. "
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:50
 msgid ""
 "If this is set to true, an icon linking to the home folder will be put on "
 "the desktop."
-msgstr ""
+msgstr "Kui valik on aktiivne, viitab ikoon töölaualt kodukataloogile."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:51
 msgid ""
 "If this is set to true, an icon linking to the trash will be put on the "
 "desktop."
-msgstr ""
+msgstr "Kui valik on aktiivne, viitab ikoon töölaualt prügikasti."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:52
 msgid ""
@@ -807,6 +818,8 @@ msgid ""
 "by name, then instead of sorting the files from \"a\" to \"z\", they will be "
 "sorted from \"z\" to \"a\"."
 msgstr ""
+"Kui valik on aktiivne, sorteeritakse failid uues aknas tagurpidi ehk kui "
+"failid on sorteeritud näiteks nime järgi, alustatakse tähest 'ü,' mitte 'a'."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:54
 msgid ""
@@ -819,15 +832,17 @@ msgstr ""
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:55
 msgid "If true, icons will be laid out tighter by default in new windows."
 msgstr ""
+"Kui valik on aktiivne, paigutatakse ikoonid uues aknas tihedamasse rivisse. "
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:56
 msgid ""
 "If true, labels will be placed beside icons rather than underneath them."
-msgstr ""
+msgstr "Kui valik on aktiivne, näidatakse silte ikooni kõrval, mitte all."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:57
 msgid "If true, new windows will use manual layout by default."
 msgstr ""
+"Kui valik on aktiivne, paigutatakse ikoonid uutes akendes vaikimisi käsitsi."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:58
 msgid ""
@@ -884,7 +899,7 @@ msgstr "Korrasta elemendid uues aknas vastupidiselt"
 #. Translators: please note this can choose the default font and the size. e.g. "Monospace 8". Please do not translate "Sans". In most cases, this should be left alone.
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:70
 msgid "Sans 10"
-msgstr ""
+msgstr "Sans 10"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:71
 msgid "Show folders first in windows"
@@ -1033,7 +1048,7 @@ msgstr ""
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:98
 msgid "When to show number of items in a folder"
-msgstr ""
+msgstr "Millal näidata kataloogis olevate kirjete arvu"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:99
 msgid "When to show preview text in icons"
@@ -2688,7 +2703,7 @@ msgstr "Rakenduse käivitamisel tekkis viga."
 #: ../libnautilus-private/nautilus-program-choosing.c:601
 #: ../src/nautilus-window-manage-views.c:1398
 msgid "The attempt to log in failed."
-msgstr "Sisselogimine ebaõnnestus."
+msgstr "Sisselogimine nurjus."
 
 #: ../libnautilus-private/nautilus-program-choosing.c:606
 #: ../src/nautilus-window-manage-views.c:1404
@@ -2931,9 +2946,8 @@ msgid "The desktop view encountered an error while starting up."
 msgstr "%s vaade tõi käivitamisel kaasa vea."
 
 #: ../src/file-manager/fm-desktop-icon-view.c:802
-#, fuzzy
 msgid "Display this location with the desktop view."
-msgstr "Kuva see koht kui \"%s\""
+msgstr "Selle asukoha kuvamine töölauavaatena."
 
 #: ../src/file-manager/fm-directory-view.c:514
 #, fuzzy, c-format
@@ -3109,7 +3123,7 @@ msgstr[1] "Oled sa kindel, et soovid \"%s\" kustutada jäädavalt prügikastist?
 
 #: ../src/file-manager/fm-directory-view.c:3189
 msgid "If you delete an item, it will be permanently lost."
-msgstr ""
+msgstr "Kui kustutad kirje, on see jäädavalt kadunud."
 
 #: ../src/file-manager/fm-directory-view.c:3190
 msgid "Delete From Trash?"
@@ -4032,9 +4046,8 @@ msgid "The icon view encountered an error while starting up."
 msgstr "%s vaade tõi käivitamisel kaasa vea."
 
 #: ../src/file-manager/fm-icon-view.c:2678
-#, fuzzy
 msgid "Display this location with the icon view."
-msgstr "Kuva see koht kui \"%s\""
+msgstr "Selle asukoha kuvamine ikoonivaatena."
 
 #: ../src/file-manager/fm-list-view.c:1625
 #, c-format
@@ -4078,9 +4091,8 @@ msgid "The list view encountered an error while starting up."
 msgstr "%s vaade tõi käivitamisel kaasa vea."
 
 #: ../src/file-manager/fm-list-view.c:2346
-#, fuzzy
 msgid "Display this location with the list view."
-msgstr "Kuva see koht kui \"%s\""
+msgstr "Selle asukoha kuvamine loendivaatena."
 
 #: ../src/file-manager/fm-properties-window.c:495
 msgid "You can't assign more than one custom icon at a time!"
@@ -4468,7 +4480,7 @@ msgstr "ekraanil"
 
 #: ../src/nautilus-application.c:346
 msgid "A link called \"Link To Old Desktop\" has been created on the desktop."
-msgstr ""
+msgstr "Töölauale loodi viit nimega 'Viit vanale töölauale'."
 
 #: ../src/nautilus-application.c:347
 msgid ""
@@ -4928,7 +4940,7 @@ msgstr "_Luba kustutada ilma prügikasti saatmata"
 
 #: ../src/nautilus-file-management-properties.glade.h:55
 msgid "List Columns"
-msgstr ""
+msgstr "Veerud nimekirjas"
 
 #: ../src/nautilus-file-management-properties.glade.h:57
 msgid "Local Files Only"
@@ -5037,7 +5049,7 @@ msgstr "Info"
 
 #: ../src/nautilus-file-management-properties.glade.h:84
 msgid "iso"
-msgstr ""
+msgstr "iso"
 
 #: ../src/nautilus-file-management-properties.glade.h:85
 msgid "locale"
@@ -5108,8 +5120,9 @@ msgid "Metering Mode"
 msgstr "Mõõtmisviis"
 
 #: ../src/nautilus-image-properties-page.c:226
+#, fuzzy
 msgid "Flash Fired"
-msgstr ""
+msgstr "Välklambi kasutamine"
 
 #: ../src/nautilus-image-properties-page.c:227
 msgid "Focal Length"
@@ -5246,7 +5259,7 @@ msgstr ""
 msgid ""
 "Do not manage the desktop (ignore the preference set in the preferences "
 "dialog)."
-msgstr ""
+msgstr "Ära halda töölaua tausta (eirab eelistuste aknas valitud sätteid)."
 
 #: ../src/nautilus-main.c:277
 msgid "open a browser window."
@@ -5551,7 +5564,7 @@ msgstr "Mustri ei suudetud paigaldada"
 
 #: ../src/nautilus-property-browser.c:1112
 msgid "Sorry, but you can't replace the reset image."
-msgstr ""
+msgstr "Vabandust, kuid lähtestamissümbolit ei saa asendada."
 
 #: ../src/nautilus-property-browser.c:1113
 #, fuzzy
