Remove obsolete window_always_new option from schema.
2005-05-10  Martin Wehner  <martin.wehner@gmail.com>

	* libnautilus-private/apps_nautilus_preferences.schemas.in:
	Remove obsolete window_always_new option from schema.

	Patch from Michael Terry <mike@mterry.name>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2005-05-10  Martin Wehner  <martin.wehner@gmail.com>
 
+	* libnautilus-private/apps_nautilus_preferences.schemas.in:
+	Remove obsolete window_always_new option from schema.
+
+	Patch from Michael Terry <mike@mterry.name>
+
+2005-05-10  Martin Wehner  <martin.wehner@gmail.com>
+
 	* src/file-manager/fm-directory-view.c: (real_update_menus):
 	Fix a string conflict between the c-format plural string and
 	non-c-format strings. Fixes bug #167344.
