Remove obsolete window_always_new option from schema.
2005-05-10  Martin Wehner  <martin.wehner@gmail.com>

	* libnautilus-private/apps_nautilus_preferences.schemas.in:
	Remove obsolete window_always_new option from schema.

	Patch from Michael Terry <mike@mterry.name>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-05-10  Martin Wehner  <martin.wehner@gmail.com>
+
+	* libnautilus-private/apps_nautilus_preferences.schemas.in:
+	Remove obsolete window_always_new option from schema.
+
+	Patch from Michael Terry <mike@mterry.name>
+
 2005-05-02  Martin Wehner  <martin.wehner@gmail.com>
 
 	* src/nautilus-window-menus.c:
