--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,15 @@
 2005-05-11  Christian Neumair  <chris@gnome-de.org>
 
+	* libnautilus-private/nautilus-file-utilities.c:
+	(nautilus_get_vfs_method_display_name):
+	* data/browser.xml:
+	* src/file-manager/fm-directory-view.c:
+	Add translator comments. Fixes #46338, #46339, #46341.
+	Change "Show Hidden Files" tooltip to infinitive
+	construction. Fixes #46337.
+
+2005-05-11  Christian Neumair  <chris@gnome-de.org>
+
 	* libnautilus-private/nautilus-directory-async.c:
 	(should_look_for_dot_directory_file), (make_dot_directory_uri),
 	(link_info_start), (lacks_link_info):
