Add translator comments. Fixes #46338, #46339, #46341.
2005-05-11  Christian Neumair  <chris@gnome-de.org>

	* libnautilus-private/nautilus-file-utilities.c:
	(nautilus_get_vfs_method_display_name):
	* data/browser.xml:
	* src/file-manager/fm-directory-view.c:
	Add translator comments. Fixes #46338, #46339, #46341.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2005-05-11  Christian Neumair  <chris@gnome-de.org>
+
+	* libnautilus-private/nautilus-file-utilities.c:
+	(nautilus_get_vfs_method_display_name):
+	* data/browser.xml:
+	* src/file-manager/fm-directory-view.c:
+	Add translator comments. Fixes #46338, #46339, #46341.
+
 2005-05-10  Martin Wehner  <martin.wehner@gmail.com>
 
 	* libnautilus-private/apps_nautilus_preferences.schemas.in:
