--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-05-12  Miloslav Trmac  <mitr@volny.cz>
+
+	* cs.po: Updated Czech translation.
+
 2005-05-11 Rajesh Ranjan <rranjan@redhat.com>
       
           *hi.po Updated Hindi Translation
