Change comment for translator note of default desktop font to say that
2005-05-12  David Zeuthen  <david@fubar.dk>

        * libnautilus-private/apps_nautilus_preferences.schemas.in:
        Change comment for translator note of default desktop font to
        say that Sans shouldn't never be changed. Fixes bug #138731.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-05-12  David Zeuthen  <david@fubar.dk>
+
+	* libnautilus-private/apps_nautilus_preferences.schemas.in: 
+	Change comment for translator note of default desktop font to
+	say that Sans shouldn't never be changed. Fixes bug #138731.
+
 2005-05-11  Christian Neumair  <chris@gnome-de.org>
 
 	* libnautilus-private/nautilus-file-utilities.c:
