--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2005-05-12  David Zeuthen  <david@fubar.dk>
+
+	* zh_TW.po: Revert default font to "Sans 10"
+
+	* gu.po: Revert default font to "Sans 10"
+
 2005-05-12  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
