--- a/po/gu.po
+++ b/po/gu.po
@@ -929,7 +929,7 @@ msgstr "નવી વિન્ડોમાં ગોઠવાવા માટે
 #. Translators: please note this can choose the default font and the size. e.g. "Monospace 8". Please do not translate "Sans". In most cases, this should be left alone.
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:70
 msgid "Sans 10"
-msgstr "સાન્સ ૧૦"
+msgstr "Sans 10"
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:71
 msgid "Show folders first in windows"
