Change comment for translator note of default desktop font to say that
2005-05-12  David Zeuthen  <david@fubar.dk>

        * libnautilus-private/apps_nautilus_preferences.schemas.in:
        Change comment for translator note of default desktop font to
        say that Sans shouldn't never be changed. Fixes bug #138731.

--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -864,7 +864,7 @@ msgstr "在新的視窗中以相反次序排列項目"
 #. Translators: please note this can choose the default font and the size. e.g. "Monospace 8". Please do not translate "Sans". In most cases, this should be left alone.
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:70
 msgid "Sans 10"
-msgstr "AR PL KaitiM Big5 10"
+msgstr "Sans 10"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:71
 msgid "Show folders first in windows"
