Make "Location:" label GDK_ACTION_COPY drag source. Fixes #115942.
2005-05-12  Christian Neumair  <chris@gnome-de.org>

	* src/nautilus-location-bar.c:
	(nautilus_location_bar_init):
	Make "Location:" label GDK_ACTION_COPY drag source.
	Fixes #115942.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-05-12  Christian Neumair  <chris@gnome-de.org>
+
+	* src/nautilus-location-bar.c:
+	(nautilus_location_bar_init):
+	Make "Location:" label GDK_ACTION_COPY drag source.
+	Fixes #115942.
+
 2005-05-12  David Zeuthen  <david@fubar.dk>
 
 	* libnautilus-private/apps_nautilus_preferences.schemas.in: 
