Updated Polish translation by GNOME PL Team.
2005-05-13  Artur Flinta  <aflinta@cvs.gnome.org>

	* pl.po: Updated Polish translation by GNOME PL Team.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-05-13  Artur Flinta  <aflinta@cvs.gnome.org>
+
+	* pl.po: Updated Polish translation by GNOME PL Team.
+
 2005-05-12  David Zeuthen  <david@fubar.dk>
 
 	* zh_TW.po: Revert default font to "Sans 10"
