--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-05-14  Hendrik Richter  <hendi@gnome-de.org>
+
+	* de.po: Updated German translation.
+
 2005-05-13  Ankit Patel <ankit644@yahoo.com>
 
 	* gu.po: Updated Gujarati Translation.
