Updated Bulgarian translation by Vladimir Petkov <vpetkov@i-space.org>
2005-05-15  Alexander Shopov  <ash@contact.bg>

	* bg.po: Updated Bulgarian translation by
	Vladimir Petkov <vpetkov@i-space.org>

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2005-05-15  Alexander Shopov  <ash@contact.bg>
+
+	* bg.po: Updated Bulgarian translation by
+	Vladimir Petkov <vpetkov@i-space.org>
+
 2005-05-14  Hendrik Richter  <hendi@gnome-de.org>
 
 	* de.po: Updated German translation.
@@ -20,13 +25,12 @@
 
 	* cs.po: Updated Czech translation.
 
-2005-05-11 Rajesh Ranjan <rranjan@redhat.com>
-      
-          *hi.po Updated Hindi Translation
+2005-05-11  Rajesh Ranjan <rranjan@redhat.com>
 
-2005-05-11 Kostas Papadimas <pkst@gnome.org>
-      
-          *el.po Updated Greek Translation
+	*hi.po Updated Hindi Translation
+
+2005-05-11  Kostas Papadimas <pkst@gnome.org>
+	*el.po Updated Greek Translation
 
 2005-05-09  Priit Laes  <plaes@cvs.gnome.org>
 
@@ -40,7 +44,7 @@
 
 	* et.po: Translation updated by  Sven Sapelson.
 
-2005-04-28   Kostas Papadimas <pkst@gnome.org>
+2005-04-28  Kostas Papadimas <pkst@gnome.org>
 
 	* el.po: Updated Greek translation
 
