Add "Properties" item to background context menu which displays the
2005-05-16  Christian Neumair  <chris@gnome-de.org>

	* src/file-manager/fm-actions.h:
	* src/file-manager/fm-directory-view.c:
	(action_self_properties_callback), (real_update_menus):
	* src/file-manager/nautilus-directory-view-ui.xml:
	Add "Properties" item to background context menu which displays
	the properties of the currently displayed folder.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2005-05-16  Christian Neumair  <chris@gnome-de.org>
+
+	* src/file-manager/fm-actions.h:
+	* src/file-manager/fm-directory-view.c:
+	(action_self_properties_callback), (real_update_menus):
+	* src/file-manager/nautilus-directory-view-ui.xml:
+	Add "Properties" item to background context menu which displays
+	the properties of the currently displayed folder.
+
 2005-05-16  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus-private/nautilus-bookmark.c:
