Use --no-desktop for default folder handler
2005-05-17  Alexander Larsson  <alexl@redhat.com>

	* nautilus-folder-handler.desktop.in (Exec):
	Use --no-desktop for default folder handler

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-05-17  Alexander Larsson  <alexl@redhat.com>
+
+	* nautilus-folder-handler.desktop.in (Exec):
+	Use --no-desktop for default folder handler
+
 2005-05-16  Christian Neumair  <chris@gnome-de.org>
 
 	* src/file-manager/fm-actions.h:
