--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,18 @@
+2005-05-17  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-view.[ch]:
+	Add nautilus_view_pop_up_location_context_menu
+	
+	* src/file-manager/fm-actions.h:
+	* src/file-manager/fm-directory-view.c:
+	* src/file-manager/fm-directory-view.h:
+	* src/file-manager/nautilus-directory-view-ui.xml:
+	* src/nautilus-location-bar.c:
+	* src/nautilus-spatial-window.c:
+	Add location context menu to location button/label.
+
+	Patch from Christian Neumair
+
 2005-05-17  Christian Neumair  <chris@gnome-de.org>
 
 	* src/nautilus-spatial-window.c:
