--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2005-05-17  Alexander Larsson  <alexl@redhat.com>
 
+	* configure.in:
+	Require eel 2.11.1
+	
+	* NEWS: 
+	Update for 2.11.1
+	
+2005-05-17  Alexander Larsson  <alexl@redhat.com>
+
 	* libnautilus-private/nautilus-view.[ch]:
 	Add nautilus_view_pop_up_location_context_menu
 	
