--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2005-05-17  Alexander Larsson  <alexl@redhat.com>
 
+	* configure.in:
+	Post release version bump
+
+=== nautilus 2.11.1 ===
+
+2005-05-17  Alexander Larsson  <alexl@redhat.com>
+
 	* icons/*/*:
 	Remove old junk.
 	
