Updated Japanese translation for v2.11.1.
2005-05-18  Takeshi AIHANA <aihana@gnome.gr.jp>
	* ja.po: Updated Japanese translation for v2.11.1.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-05-18  Takeshi AIHANA <aihana@gnome.gr.jp>
+
+	* ja.po: Updated Japanese translation.
+
 === nautilus 2.11.1 ===
 
 2005-05-15  Alexander Shopov  <ash@contact.bg>
