translation fix by Baptiste Mille-Mathias <bmm80@free.fr>

--- a/po/fr.po
+++ b/po/fr.po
@@ -2113,7 +2113,7 @@ msgstr "Préparation de la purge de la corbeille..."
 
 #: libnautilus-private/nautilus-file-operations.c:2562
 msgid "Empty all of the items from the trash?"
-msgstr "Supprimer définitivement tous les éléments de la corbeille ?"
+msgstr "Supprimer tous les éléments de la corbeille ?"
 
 #: libnautilus-private/nautilus-file-operations.c:2565
 msgid ""
