--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+2005-05-22  Martin Wehner  <martin.wehner@gmail.com>
+
+	* components/*
+	* help/*
+	* icons/*/*
+	* libnautilus/*
+	* libnautilus-adapter/*
+	* omf-install/*
+	* user-guide/*
+	Remove old cruft, mostly .cvsignore files.
+
+	* autogen.sh:
+	Look for libnautilus-private instead of libnautilus.
+
 2005-05-21  Christian Neumair  <chris@gnome-de.org>
 
 	* libnautilus-private/nautilus-icon-factory.c:
