Nicer formatted PKG_CHECK_MODULES() output. (#148355)
2005-05-22  Martin Wehner  <martin.wehner@gmail.com>

	* configure.in:
	Nicer formatted PKG_CHECK_MODULES() output. (#148355)

	Patch from Tomasz Kloczko <kloczek@pld.org.pl>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2005-05-22  Martin Wehner  <martin.wehner@gmail.com>
 
+	* configure.in:
+	Nicer formatted PKG_CHECK_MODULES() output. (#148355)	
+
+	Patch from Tomasz Kloczko <kloczek@pld.org.pl>
+
+2005-05-22  Martin Wehner  <martin.wehner@gmail.com>
+
 	* components/*
 	* help/*
 	* icons/*/*
