--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-05-23  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-file.c (nautilus_file_get_string_attribute):
+	Change sort order for size, count and time.
+	See bug #88585
+
 2005-05-22  Martin Wehner  <martin.wehner@gmail.com>
 
 	* configure.in:
