--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-05-23  Gabor Kelemen  <kelemeng@gnome.hu>
+
+	* hu.po: Hungarian translation updated.
+
 2005-05-21  Hendrik Richter  <hendi@gnome-de.org>
 
 	* de.po: Updated German translation.
