--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-02-10 12:02+0100\n"
-"PO-Revision-Date: 2005-02-07 00:13+0800\n"
+"PO-Revision-Date: 2005-05-24 08:00+0800\n"
 "Last-Translator: Funda Wang <fundawang@linux.net.cn>\n"
 "Language-Team: zh_CN <i18n-translation@lists.linux.net.cn>\n"
 "MIME-Version: 1.0\n"
@@ -826,7 +826,7 @@ msgid ""
 "by name, then instead of sorting the files from \"a\" to \"z\", they will be "
 "sorted from \"z\" to \"a\"."
 msgstr ""
-"如果为 true，新窗口岁的文件将以逆序排序。即，如果是按照名称排序的话，会"
+"如果为 true，新窗口中的文件将以逆序排序。即，如果是按照名称排序的话，会"
 "将“z”排在最前面，将“a”排在最后面。"
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:54
@@ -836,7 +836,7 @@ msgid ""
 "sorted from \"z\" to \"a\"; if sorted by size, instead of being "
 "incrementally they will be sorted decrementally."
 msgstr ""
-"如果为 true，新窗口岁的文件将以逆序排序。即，如果是按照名称排序的话，会"
+"如果为 true，新窗口中的文件将以逆序排序。即，如果是按照名称排序的话，会"
 "将“z”排在最前面，将“a”排在最后面；如果是按照大小排序的话，会将最大的文件排在"
 "最前面，将最小的文件排在最后面。"
 
@@ -3565,10 +3565,13 @@ msgstr "用“%s”打开(_O)"
 
 #. add the "open in new window" menu item
 #: src/file-manager/fm-directory-view.c:6229
-#: src/file-manager/fm-directory-view.c:6231
 #: src/file-manager/fm-tree-view.c:1110
-#, c-format
 msgid "Open in New Window"
+msgstr "在新窗口中打开"
+
+#: src/file-manager/fm-directory-view.c:6231
+#, c-format
+msgid "Open in %d New Window"
 msgid_plural "Open in %d New Windows"
 msgstr[0] "在 %d 个新窗口中打开"
 
