--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-05-24  Adi Attar  <aattar@cvs.gnome.org>
+
+	* xh.po: Updated Xhosa translation.
+
 2005-05-24  Funda Wang  <fundawang@linux.net.cn>
 
 	* zh_CN.po: Updated Simplified Chinese translation.
