Bind shift+scroll to zoom in/out. Fixes #79352.
2005-05-25  Christian Neumair  <chris@gnome-de.org>

	* src/file-manager/fm-directory-view.c:
	(fm_directory_view_scroll_event),
	(fm_directory_view_class_init):
	Bind shift+scroll to zoom in/out. Fixes #79352.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-05-25  Christian Neumair  <chris@gnome-de.org>
+
+	* src/file-manager/fm-directory-view.c:
+	(fm_directory_view_scroll_event),
+	(fm_directory_view_class_init):
+	Bind shift+scroll to zoom in/out. Fixes #79352.
+
 2005-05-23  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus-private/nautilus-file.c (nautilus_file_get_string_attribute):
